# agentic-spliceai

./: .env.example  .gitignore  404.html  QUICKSTART.md  README.md  README_DOCS.md  SETUP.md  STRUCTURE.md  __init__.py  data  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  sitemap.xml  verify_setup.py
.github/workflows/: docs.yml
CONTRIBUTING/: index.html
PACKAGE_ORGANIZATION/: index.html
QUICKSTART/: index.html
ROADMAP/: index.html
RUNPODS_SETUP/: index.html
SETUP/: index.html
SPLICE_PREDICTION_GUIDE/: index.html
STRUCTURE/: index.html
agency/: index.html
agency/AGENTIC_MEMORY_TUTORIAL/: index.html
agency/MEMORY_PATTERNS/: index.html
api/: index.html
api/ENDPOINTS/: index.html
applications/: index.html
applications/_template/: index.html
applications/adaptive_splice_prediction/: index.html
applications/agentic_validation/: index.html
applications/bioinformatics_lab_ui/: index.html
applications/canonical_splice_prediction/: index.html
applications/foundation_model_predictors/: index.html
applications/genomic_data_preparation/: index.html
applications/multimodal_features/: index.html
applications/novel_isoform_discovery/: index.html
applications/use_cases/: index.html
applications/variant_analysis/: index.html
architecture/: index.html
architecture/PACKAGE_ORGANIZATION/: index.html
architecture/STRUCTURE/: index.html
base_layer/COORDINATE_ADJUSTMENT/: index.html
base_layer/DATA_PREPARATION_CLI/: index.html
base_layer/POSITION_COORDINATE_SYSTEMS/: index.html
base_layer/PROCESSING_ARCHITECTURE/: index.html
bioinformatics/: index.html
bioinformatics/reference_genome_foundations/: index.html
biology/: index.html
compute/: index.html
compute/remote_training_options/: index.html
data_backup_old_symlinks/: GRCh38_MANE  Han1  ORF  README.md  ensembl  gtex_uORFconnected_txs.csv  gtex_uORFconnected_txs.w_utrs.csv  mane  models  query_uorfs.fa  query_uorfs.gtf  splice_sites_enhanced.tsv  splice_sites_enhanced_summary.md  spliceai_analysis  spliceai_eval  supplementary-tables.xlsx  test_pc_1000_3mers  test_quick  train_pc_1000_3mers  train_pc_100_3mers_diverse
data_backup_old_symlinks/llm/: README.md  available_models.json
data_backup_old_symlinks/test_agentic_pipeline/: full_splice_positions_enhanced.tsv  gene_manifest.tsv  gene_sequence.parquet
data_backup_old_symlinks/test_multi_gene/: agentic_EGFR_scores.parquet  agentic_MYC_scores.parquet  agentic_TP53_scores.parquet  full_splice_positions_enhanced.tsv  gene_manifest.tsv  gene_sequence.parquet  meta_EGFR_acceptor.npy  meta_EGFR_donor.npy  meta_EGFR_neither.npy  meta_EGFR_positions.npy  meta_MYC_acceptor.npy  meta_MYC_donor.npy  meta_MYC_neither.npy  meta_MYC_positions.npy  meta_TP53_acceptor.npy  meta_TP53_donor.npy  meta_TP53_neither.npy  meta_TP53_positions.npy
docs/: CONTRIBUTING.md  README.md  ROADMAP.md  RUNPODS_SETUP.md  STRUCTURE.md  test_math.md
docs/agency/: AGENTIC_MEMORY_TUTORIAL.md  MEMORY_PATTERNS.md  README.md
docs/api/: ENDPOINTS.md  README.md
docs/applications/: README.md  _template.md  use_cases.md
docs/architecture/: PACKAGE_ORGANIZATION.md  README.md  STRUCTURE.md
docs/base_layer/: BASE_LAYER_INTEGRATION_SUMMARY.md  COORDINATE_ADJUSTMENT.md  DATA_PREPARATION_CLI.md  POSITION_COORDINATE_SYSTEMS.md  PROCESSING_ARCHITECTURE.md
docs/bioinformatics/: README.md  (+1 more)
examples/: README.md  README_PATH_RESOLUTION.md  _example_utils.py  analyze_splice_sites.py  quick_start.py  splice_prediction_example.py
foundation_models/: QUICKSTART.md  README.md  environment-evo2-local.yml  environment-evo2-pod.yml  index.html  pyproject.toml  setup.py
foundation_models/configs/: data_layout.yaml  deepspeed_noop.json  deepspeed_zero2.json  deepspeed_zero3_offload.json  gpu_config.yaml
foundation_models/configs/skypilot/: extract_embeddings_a100.yaml  extract_embeddings_a40.yaml  extract_embeddings_a40_volume.yaml  train_classifier_a40.yaml
foundation_models/docs/: README.md
foundation_models/docs/compute/: cloud-storage-setup.md
foundation_models/docs/evo2/: junction_support_labels.md
foundation_models/docs/results/: splice-site-prediction-results.md
foundation_models/evo2/junction_support_labels/: index.html
foundation_models/examples/: 01_load_evo2_local.py  02_extract_embeddings.py  03_train_classifier.py  04_evaluate_classifier.py
foundation_models/foundation_models/: __init__.py  base.py  gpu_runner.py
foundation_models/foundation_models/classifiers/: __init__.py  finetune.py  losses.py  splice_classifier.py
foundation_models/foundation_models/data/: __init__.py  datasets.py  sequence_dataset.py  sharding.py
foundation_models/foundation_models/dnabert/: __init__.py  config.py  model.py
foundation_models/foundation_models/evo2/: __init__.py  classifier.py  config.py  embedder.py  exon_classifier.py  model.py
foundation_models/foundation_models/hyenadna/: __init__.py  config.py  embedder.py  model.py
foundation_models/foundation_models/splicebert/: __init__.py  config.py  model.py
foundation_models/foundation_models/utils/: __init__.py  chunking.py  embedding_diagnostics.py  quantization.py  resources.py  synthetic.py
foundation_models/training/deepspeed_training/: index.html
isoform_discovery/: index.html
meta_layer/: index.html
notebooks/: README.md
products/: index.html
runpods.example/: README.md  environment-runpods-minimal.yml
scripts/: README.md  TABLE_VIEWER_README.md  aggregate_gtex_junctions.py  sync_obsidian.sh  view_table.py  vt  vtt  vtw
search/: search_index.json
server/: INTEGRATION.md  QUICKSTART.md  README.md  SERVICE_MANAGEMENT.md  SUMMARY.md  __init__.py  chart_service.py  config.py  manage.py  schemas.py  splice_service.py  stop_service.sh  test_analyze.py  test_client.py  test_full_workflow.py  test_http.py  test_swagger.html
system_design/: index.html
test_math/: index.html
tests/: README.md  test_coordinate_adjustment.py
tutorials/: index.html
variant_analysis/: index.html
workflows/: index.html
(+609 files in other folders)
